--- a/SimHubPlugin/DIYFFBPedalControlUI.xaml
+++ b/SimHubPlugin/DIYFFBPedalControlUI.xaml
@@ -559,7 +559,7 @@
                                                 <styles:SHButtonPrimary Click="ReadConfigFromPedal_click" Width="160" Height="25" Content="Load Config from Pedal" Margin="0,2,0,0" HorizontalAlignment="Left" Padding="0,0,0,0" VerticalContentAlignment="Center" />
                                                 <styles:SHButtonPrimary Click="SaveButton_Click" Width="160" Content="Export Config to Local" Height="25" Margin="0,2,0,0" HorizontalAlignment="Left" Padding="15,0,15,0" VerticalContentAlignment="Center" />
                                                 <styles:SHButtonPrimary Click="OpenButton_Click" Width="160" Content="Load Config from Local" Height="25" Margin="0,2,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Padding="15,0,15,0" VerticalContentAlignment="Center" />
-                                                <styles:SHButtonPrimary x:Name="btn_OnlineProfile" Click="btn_OnlineProfile_Click" Width="160" Content="Online Config" Height="25" Margin="0,2,0,0" HorizontalAlignment="Center" Padding="15,0,15,0" VerticalContentAlignment="Center" />
+                                                <styles:SHButtonPrimary x:Name="btn_OnlineProfile" Click="btn_OnlineProfile_Click" Width="160" Content="Community Config" Height="25" Margin="0,2,0,0" HorizontalAlignment="Center" Padding="15,0,15,0" VerticalContentAlignment="Center" />
                                                 <styles:SHButtonPrimary x:Name="button_pedal_restart" Click="RestartPedal_click" Width="160" Content="Restart Pedal" Height="25" Margin="0,2,0,0" HorizontalAlignment="Center" MinHeight="20" Padding="15,0,15,0" VerticalContentAlignment="Center" />
                                                 <styles:SHButtonPrimary x:Name="btn_reset_default" Click="btn_reset_default_Click" Width="160"  Content="Reset Config to Default" Height="25" Margin="0,2,0,0" HorizontalAlignment="Center" ToolTip="Reset the config to default" Padding="15,0,15,0" VerticalContentAlignment="Center" />
                                                 <styles:SHButtonPrimary x:Name="btn_PedalID_Reset" Click="btn_PedalID_Reset_Click" Width="160" Content="Reset Pedal ID" Height="25" Margin="0,2,0,0" HorizontalAlignment="Center" VerticalContentAlignment="Center" Padding="15,0,15,0" />
@@ -695,7 +695,7 @@
                                                                 </TransformGroup>
 
                                                             </Canvas.RenderTransform>
-
+                                                            <TextBlock x:Name="TextBlock_Warning" Height="40" Width="200" FontFamily="Arial" FontSize="9" Margin="100,80,0,0" Foreground="#FFF44343" />
 
 
                                                             <TextBlock HorizontalAlignment="Center" 
@@ -758,6 +758,7 @@
                                                                     </TransformGroup>
                                                                 </Polyline.RenderTransform>
                                                             </Polyline>
+                                                            
                                                             <TextBlock x:Name="text_SABS" HorizontalAlignment="Left" VerticalAlignment="Top" Text="Simulated ABS" Width="120" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Left="320" Canvas.Top="80.2" FontSize="8" Height="10">
                                                                 <TextBlock.RenderTransform>
                                                                     <TransformGroup>
@@ -998,7 +999,7 @@
                                                     </StackPanel>
                                                     <localUI:SliderWithLabel x:Name="Slider_damping" SliderLength="400" SliderName="Damping factor" TickFrequency="0.00015" Unit="s" Width="400" Height="40" MaxValue="0.0375" SliderValueChanged="Slider_damping_ValueChanged"/>
                                                     <StackPanel Height="40" Width="540" HorizontalAlignment="Left" VerticalAlignment="Top" Orientation="Horizontal">
-                                                        <localUI:SliderWithLabel x:Name="Slider_LC_rate" Width="200" SliderLength="190" SliderName="Loadcell Rate" MaxValue="500" Height="40" Unit="kg" TickFrequency="10" SliderValue="300" SliderValueChanged="Slider_LC_rate_ValueChanged" Margin="70,0,0,0"/>
+                                                        <localUI:SliderWithLabel x:Name="Slider_LC_rate" Width="200" SliderLength="190" SliderName="Loadcell Rate" MaxValue="500" Height="40" Unit="kgf" TickFrequency="10" SliderValue="300" SliderValueChanged="Slider_LC_rate_ValueChanged" Margin="70,0,0,0"/>
                                                         <localUI:SliderWithLabel x:Name="Slider_maxgame_output" SliderName="Max Game Output" SliderLength="190" SliderValue="100" Width="190" Height="40" Margin="10,0,0,0" Unit="%" SliderValueChanged="Slider_maxgame_output_ValueChanged"/>
                                                     </StackPanel>
                                                     <StackPanel Height="40" Width="540" Orientation="Horizontal" HorizontalAlignment="Left">
@@ -1214,7 +1215,7 @@
                                                     </StackPanel>
 
                                                     
-                                                    <localUI:SliderWithLabel x:Name="Slider_ABS_AMP" Width="400" Height="40" SliderLength="400" MaxValue="12.5" TickFrequency="0.05" SliderName="ABS/TC Amplitude" Unit="kg" SliderValueChanged="Slider_ABS_AMP_ValueChanged" />
+                                                    <localUI:SliderWithLabel x:Name="Slider_ABS_AMP" Width="400" Height="40" SliderLength="400" MaxValue="12.5" TickFrequency="0.05" SliderName="ABS/TC Amplitude" Unit="kgf" SliderValueChanged="Slider_ABS_AMP_ValueChanged" />
                                                     <localUI:SliderWithLabel x:Name="Slider_ABS_freq" Width="400" Height="40" SliderLength="400" SliderName="ABS/TC Frequency" MaxValue="50" Unit="Hz" SliderValueChanged="Slider_ABS_freq_ValueChanged"/>
 
                                                 </StackPanel>
@@ -1246,7 +1247,7 @@
 
 
                                                     
-                                                    <localUI:SliderWithLabel x:Name="Slider_RPM_AMP" Width="400" Height="40" TickFrequency="0.01" MaxValue="2" SliderLength="400" Unit="kg" SliderName="Effect Amplitude" SliderValueChanged="Slider_RPM_AMP_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_RPM_AMP" Width="400" Height="40" TickFrequency="0.01" MaxValue="2" SliderLength="400" Unit="kgf" SliderName="Effect Amplitude" SliderValueChanged="Slider_RPM_AMP_ValueChanged"/>
                                                     <StackPanel Width="400" Height="50">
                                                         <StackPanel Width="400" Height="12" Orientation="Horizontal">
                                                             <Label x:Name="label_RPM_freq"  Width="250" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Effect Frequency:" Height="12" Padding="0,0,0,0"/>
@@ -1278,7 +1279,7 @@
 
                                                     </Canvas>
                                                     
-                                                    <localUI:SliderWithLabel x:Name="Slider_BP_AMP" Width="400" Height="40" TickFrequency="0.01" SliderLength="400" MaxValue="2" SliderName="Bite Point Amplitude" Unit="kg" SliderValueChanged="Slider_BP_AMP_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_BP_AMP" Width="400" Height="40" TickFrequency="0.01" SliderLength="400" MaxValue="2" SliderName="Bite Point Amplitude" Unit="kgf" SliderValueChanged="Slider_BP_AMP_ValueChanged"/>
                                                     <localUI:SliderWithLabel x:Name="Slider_BP_freq" Width="400" Height="40" Unit="Hz" SliderLength="400" MinValue="10" MaxValue="50" SliderName="Bite Point Frequency" SliderValueChanged="Slider_BP_freq_ValueChanged"/>
                                                     
                                                 </StackPanel>
@@ -1333,7 +1334,7 @@
 
                                                     
                                                     <localUI:SliderWithLabel x:Name="Slider_WS_trigger" Width="400" Height="40" SliderLength="400" Unit=" " SliderName="Notification Trigger" SliderValueChanged="Slider_WS_trigger_ValueChanged" SliderValue="80"/>
-                                                    <localUI:SliderWithLabel x:Name="Slider_WS_AMP" Width="400" Height="40" TickFrequency="0.05" MaxValue="12.5" SliderLength="400" Unit="kg" SliderName="Notification Amplitude" SliderValueChanged="Slider_WS_AMP_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_WS_AMP" Width="400" Height="40" TickFrequency="0.05" MaxValue="12.5" SliderLength="400" Unit="kgf" SliderName="Notification Amplitude" SliderValueChanged="Slider_WS_AMP_ValueChanged"/>
                                                     <localUI:SliderWithLabel x:Name="Slider_WS_freq" Width="400" Height="40" SliderValue="10" Unit="Hz" SliderLength="400" MinValue="10" MaxValue="50" SliderValueChanged="Slider_WS_freq_ValueChanged" SliderName="Notification Frequency"/>
 
                                                 </StackPanel>
@@ -1388,7 +1389,7 @@
                                                         </StackPanel>
                                                     </StackPanel>
                                                     <localUI:SliderWithLabel x:Name="Slider_CV1_trigger" Width="400" Height="40" SliderLength="400" SliderName="Effect Trigger" SliderValueChanged="Slider_CV1_trigger_ValueChanged"/>
-                                                    <localUI:SliderWithLabel x:Name="Slider_CV1_AMP" Width="400" Height="40" SliderLength="400" Unit="kg" MaxValue="12.5" TickFrequency="0.05" SliderName="Effect Amplitude" SliderValueChanged="Slider_CV1_AMP_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_CV1_AMP" Width="400" Height="40" SliderLength="400" Unit="kgf" MaxValue="12.5" TickFrequency="0.05" SliderName="Effect Amplitude" SliderValueChanged="Slider_CV1_AMP_ValueChanged"/>
                                                     <localUI:SliderWithLabel x:Name="Slider_CV1_freq" Width="400" Height="40" MinValue="10" MaxValue="50" SliderValue="10" Unit="Hz" SliderName="Effect Frequency" SliderValueChanged="Slider_CV1_freq_ValueChanged" SliderLength="400"/>
                                                     
                                                 </StackPanel>
@@ -1418,7 +1419,7 @@
                                                         </StackPanel>
                                                     </StackPanel>
                                                     <localUI:SliderWithLabel x:Name="Slider_CV2_trigger" Width="400" Height="40" SliderLength="400" SliderName="Effect Trigger" SliderValueChanged="Slider_CV2_trigger_ValueChanged"/>
-                                                    <localUI:SliderWithLabel x:Name="Slider_CV2_AMP" Width="400" Height="40" SliderLength="400" Unit="kg" MaxValue="12.5" TickFrequency="0.05" SliderName="Effect Amplitude" SliderValueChanged="Slider_CV2_AMP_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_CV2_AMP" Width="400" Height="40" SliderLength="400" Unit="kgf" MaxValue="12.5" TickFrequency="0.05" SliderName="Effect Amplitude" SliderValueChanged="Slider_CV2_AMP_ValueChanged"/>
                                                     <localUI:SliderWithLabel x:Name="Slider_CV2_freq" Width="400" Height="40" MinValue="10" MaxValue="50" SliderValue="10" Unit="Hz" SliderName="Effect Frequency" SliderValueChanged="Slider_CV2_freq_ValueChanged" SliderLength="400"/>
                                                 </StackPanel>
                                             </Border>
@@ -1657,7 +1658,7 @@
                                                         <styles:SHToggleButton x:Name="checkbox_enable_RPM_rudder" Content="" Checked="checkbox_enable_RPM_rudder_Checked" Unchecked="checkbox_enable_RPM_rudder_Unchecked" IsChecked="False" FontSize="10" Width="35" Height="15" HorizontalAlignment="Left" FontFamily="Arial"  Margin="60,0,0,0" ToolTip="Enable for RPM/Spped rumble, the trigger was save in local, no need sned config to Pedal"/>
                                                         <Label Content="Engine RPM Rumble Effect" Height="15" Width="300" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial Black" HorizontalAlignment="Left" Margin="4,0,0,0"/>
                                                     </StackPanel>
-                                                    <localUI:SliderWithLabel x:Name="Slider_RPM_AMP_rudder" Width="400" Height="40" SliderLength="400" TickFrequency="0.01" MaxValue="2" SliderName="Effect Amplitude" Unit="kg" SliderValueChanged="Slider_RPM_AMP_rudder_ValueChanged"/>
+                                                    <localUI:SliderWithLabel x:Name="Slider_RPM_AMP_rudder" Width="400" Height="40" SliderLength="400" TickFrequency="0.01" MaxValue="2" SliderName="Effect Amplitude" Unit="kgf" SliderValueChanged="Slider_RPM_AMP_rudder_ValueChanged"/>
                                                     <StackPanel Width="400" Height="50">
                                                         <StackPanel Width="400" Height="12" Orientation="Horizontal">
                                                             <Label x:Name="label_RPM_freq_rudder"  Width="250" Foreground="White" RenderTransformOrigin="0.5,0.5" Canvas.Top="3" FontSize="10" FontFamily="Arial" Canvas.Left="5" HorizontalAlignment="Left" VerticalAlignment="Top" Content="Effect Frequency:" Height="12" Padding="0,0,0,0"/>
