--- a/SimHubPlugin/DIYFFBPedalControlUI.xaml
+++ b/SimHubPlugin/DIYFFBPedalControlUI.xaml
@@ -1064,48 +1064,7 @@
                                                     <Label Content="ABS/TC"  FontFamily="Arial Black" FontSize="10" Height="30" Width="67.5" Padding="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ToolTip="Parameter of the ABS/TC effect "  />
                                                 </Border>
                                             </TabItem.Header>
-                                            <Border Background="#7F4E4E4E" CornerRadius="5,5,5,5" Height="240" BorderThickness="0,2,0,0" >
-                                                <StackPanel HorizontalAlignment="Left" Height="240" VerticalAlignment="Top" Width="540">
-                                                    <StackPanel Height="20" Width="540" Orientation="Horizontal">
-                                                        <styles:SHToggleButton x:Name="checkbox_enable_ABS" Content="" Checked="checkbox_enable_ABS_Checked" Unchecked="checkbox_enable_ABS_Unchecked" IsChecked="False" FontSize="10" Width="35" Height="15" HorizontalAlignment="Left" FontFamily="Arial"  Margin="60,0,0,0" ToolTip="Enable for ABS/TC effect, the trigger was save in local, no need send config to Pedal"/>
-                                                        <Label Content="ABS/TC Effect" Height="15" Width="150" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial Black" HorizontalAlignment="Left" Margin="4,0,0,0"/>
-                                                    </StackPanel>
-
-                                                    <Canvas x:Name="canvas_plot_ABS" Height="50" Width="400" Background="#7F20232F" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Margin="70,2,0,0" >
-                                                        <Polyline x:Name="Polyline_plot_ABS" Height="50" Width="400" Points="0,25 80,25 160,25 240,25 320,25 400,25" Stroke="{DynamicResource AccentColorBrush}" Opacity="0.7" HorizontalAlignment="Left" VerticalAlignment="Center" StrokeThickness="2" />
-
-                                                    </Canvas>
-
-                                                    <StackPanel Height="40" Width="540" Orientation="Horizontal" HorizontalAlignment="Left">
-                                                        <Label Content="Effect Profile:" Height="20" Width="65" FontSize="10" Padding="0,0,0,0" VerticalContentAlignment="Center" Margin="70,0,0,0"/>
-                                                        <ComboBox x:Name="AbsPattern" SelectionChanged="AbsPatternChanged"   Width="80" Height="10" FontSize="10" SelectedIndex="0" Margin="10,0,0,0" BorderThickness="0,0,0,0">
-                                                            <ComboBoxItem Content="Sinewave"/>
-                                                            <ComboBoxItem Content="Sawtooth"/>
-                                                        </ComboBox>
-                                                        <styles:SHButtonPrimary Content="Test ABS/TC" Click="TestAbs_click" Height="20"  FontWeight="Bold" FontSize="9" Width="80" HorizontalAlignment="Left" Margin="10,0,0,0" ToolTip="Click for testing ABS/TC, click again to cancel" MinHeight="20" FontFamily="Arial" Padding="0,0,0,0" VerticalContentAlignment="Center"/>
-                                                        <CheckBox Width="30" x:Name="TestAbs_check" IsEnabled="False" Height="20" FontSize="8" Foreground="White" Content="" HorizontalAlignment="Left" Margin="3,0,0,0"/>
-
-
-                                                    </StackPanel>
-                                                    <StackPanel Height="40" Width="540" Orientation="Horizontal">
-                                                        <Label Content="Effect Apply By:" Height="25" Width="75" FontSize="10" Margin="70,0,0,0" FontFamily="Arial" VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Left" Padding="0,0,0,0"/>
-                                                        <ComboBox x:Name="EffectAppliedOnForceOrTravel_combobox" SelectionChanged="EffectAppliedOnForceOrTravel_combobox_changed" Width="80" Height="10" FontSize="10" SelectedIndex="0" BorderThickness="0,0,0,0">
-                                                            <ComboBoxItem Content="Force"/>
-                                                            <ComboBoxItem Content="Travel"/>
-                                                        </ComboBox>
-                                                        <StackPanel Height="20" Width="160" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0">
-                                                            <styles:SHToggleButton x:Name="Simulate_ABS_check" Content="" Checked="Simulate_ABS_check_Checked" Unchecked="Simulate_ABS_check_Unchecked" IsChecked="False" FontSize="10" Width="35" Height="15" HorizontalAlignment="Left" FontFamily="Arial" ToolTip="the effect will trigger by the setup force range." RenderTransformOrigin="0.5,0.5" Margin="-10,0,0,0" />
-                                                            <Label Content="Simulate ABS" Height="20" Width="130" Padding="0,0,0,0" VerticalContentAlignment="Center" FontFamily="Arial" HorizontalAlignment="Left" FontSize="10" Margin="4,0,0,0"/>
-                                                        </StackPanel>
-
-                                                    </StackPanel>
-
-                                                    
-                                                    <localUI:SliderWithLabel x:Name="Slider_ABS_AMP" Width="400" Height="40" SliderLength="400" MaxValue="12.5" TickFrequency="0.05" SliderName="ABS/TC Amplitude" Unit="kg" SliderValueChanged="Slider_ABS_AMP_ValueChanged" />
-                                                    <localUI:SliderWithLabel x:Name="Slider_ABS_freq" Width="400" Height="40" SliderLength="400" SliderName="ABS/TC Frequency" MaxValue="50" Unit="Hz" SliderValueChanged="Slider_ABS_freq_ValueChanged"/>
-
-                                                </StackPanel>
-                                            </Border>
+                                            <localFunction:EffectsTab_ABS x:Name="EffectsABS_Tab" ConfigChanged="Tab_ConfigChanged" SettingsChanged="Tab_SettingsChanged" CalculationChanged="Tab_CalculationChanged" />
                                         </TabItem>
                                         <TabItem Width="67.5" Height="30" Padding="0,0,0,0">
                                             <TabItem.Header>
@@ -1577,7 +1536,7 @@
                                                 </StackPanel>
                                             </Border>
                                         </TabItem>
-                                        <TabItem  Width="90" Height="30" Padding="0,0,0,0" ToolTip="General setting for Pedal, will save to pedal">
+                                        <TabItem x:Name="ABS_tab"  Width="90" Height="30" Padding="0,0,0,0" ToolTip="General setting for Pedal, will save to pedal">
                                             <TabItem.Header>
                                                 <Border  Width="90" Height="30" Margin="0,0,0,0" >
                                                     <Label Content="Test"  FontFamily="Arial Black" FontSize="10" Height="30" Width="90" Padding="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" UseLayoutRounding="True"  />
@@ -1586,7 +1545,7 @@
                                             
                                         </TabItem>
                                     </TabControl>
-
+                                    
                                 </StackPanel>
                             </StackPanel>
                         </StackPanel>
